Com a APIs de especialidade, termo de postagem, termo de vinculo e tipo de projetos feitas